@@ -1,5 +1,6 @@
 2022/01/19
 • Slash command support for adding and retrieving names.
+• Slash command support for adding, listing, and deleting events.
 2021/10/04
 • Slash command to report emoji usage.
 2021/10/04\n' +
